@@ -1,3 +1,7 @@
+2010-06-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/asian.cpp: Converted to new API
+
 2010-06-15  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/vanilla.cpp: Converted to new API
